# lrc-orlb

./: README.md  check.sh  exp.sh  install_third_party.sh  kill_proxy_datanode_redis.sh  run_client.sh  run_proxy_datanode.sh  run_redis.sh  run_server.sh
project/: CMakeLists.txt  CmakeLists.txt  clusterinfo.xml  compile.sh
project/include/: client.h  coordinator.h  datanode.h  proxy.h  utils.h  zipf.h
project/include/erasure_codes/: common.h  lrc.h
project/src/: utils.cpp
project/src/client/: client.cpp  run_client.cpp  sim_load_balance.cpp  simulation.cpp
project/src/coordinator/: auxs.cpp  coordinator.cpp  migration.cpp  placement.cpp  repair.cpp  run_coordinator.cpp
project/src/datanode/: datanode.cpp  run_datanode.cpp
project/src/erasure_codes/: common.cpp  lrc.cpp
project/src/proxy/: handle_repair.cpp  proxy.cpp  run_proxy.cpp
tools/: generator_sh.py
